--- a/Bionly/Bionly/Views/LoginPage.xaml
+++ b/Bionly/Bionly/Views/LoginPage.xaml
@@ -7,8 +7,17 @@
              x:Class="Bionly.Views.LoginPage"
              Shell.NavBarIsVisible="False">
     <ContentPage.Content>
-        <StackLayout Padding="10,0,10,0" VerticalOptions="Center">
-            <Button VerticalOptions="Center" Text="Login" Command="{Binding LoginCommand}"/>
-        </StackLayout>
+        <ScrollView VerticalOptions="Center" HorizontalOptions="Center">
+            <StackLayout Padding="10,0,10,0" WidthRequest="400">
+                <Image Source="bionly_logo.png" WidthRequest="150" HorizontalOptions="Center" Margin="10"/>
+                
+                <Entry ClearButtonVisibility="WhileEditing" Keyboard="Text" Placeholder="Benutzername" Margin="0,20,0,0"/>
+                <Entry ClearButtonVisibility="WhileEditing" Keyboard="Text" Placeholder="Passwort" IsPassword="True"/>
+
+                <Button VerticalOptions="Center" Text="Anmelden" Command="{Binding LoginCommand}" Margin="0,0,0,10"/>
+                <Line HeightRequest="1" BackgroundColor="gray" Margin="100,0"/>
+                <Button VerticalOptions="Center" Text="Als Gast fortfahren" Command="{Binding LoginCommand}" Margin="20,10,20,80" BackgroundColor="LightSlateGray"/>
+            </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
